--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "listener": "ts-node ./src/index.ts",
-        "initialize": "ts-node ./src/initialize.ts"
+        "initialize": "ts-node ./src/initialize.ts",
+        "createTransferInstruction": "ts-node ./src/createTransferInstruction.ts"
     },
     "keywords": [],
     "author": "",
@@ -13,6 +14,7 @@
     "packageManager": "yarn@4.3.1",
     "devDependencies": {
         "@types/node": "^20.14.8",
+        "@types/yaml": "^1.9.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.2"
     },
